--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 
 </head>
 <body>
-<h1>Olá DSMovie</h1>
-<h2>Promoções</h2>
-<h3>Agenda de filmes</h3>
+    <header>
+        <nav class="container">
+            <h1>DSMovie</h1>
+            <a href="https://www.linkedin.com/in/gabriel-nogueira-452926233/">/Gabriel Nogueira</a>
+        </nav>
+    </header>
+
 </body>
 </html>
