Barra Superior PARTE II

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <a href="https://www.linkedin.com/in/gabriel-nogueira-452926233/">/Gabriel Nogueira</a>
+            <div>
+                <img src="img/git hub.svg" alt="Github">
+                <a href="https://github.com/gg-nogueira/">/Gabriel Nogueira</a>
+            </div>
         </nav>
     </header>
 
