--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSMovie</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+        crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/styles.css"
+    <link rel="stylesheet" href="css/styles.css" </head>
 
-</head>
 <body>
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <div>
+            <div class="DSMovie-contact-container">
                 <img src="img/git hub.svg" alt="Github">
                 <a href="https://github.com/gg-nogueira/">/Gabriel Nogueira</a>
             </div>
         </nav>
     </header>
 
+<main>
+    <section id="dsmovie-card-list" class="container">
+
+        <div class="dsmovie-card ">
+            <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg" alt="Naruto">
+            <div class="dsmovie-card-description">
+                <h3>Naruto</h3>
+                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+            </div>
+
+        </div>
+    </section>
+
+</main>
+
+
 </body>
+
 </html>
