--- a/index.html
+++ b/index.html
@@ -51,131 +51,30 @@
 
                     </div>
                 </div>
-
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
+                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/8CmeBJNUzOFk29diWfJf8de332i.jpg"
+                            alt="Saitama">
                         <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>One Punch Man</h3>
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>4.0</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>15 avaliações</p>                                                              
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+                            
                         </div>
 
                     </div>
                 </div>
 
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
-                        <div class="dsmovie-card-description">
-                            <h3>Naruto</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
-                        </div>
-
-                    </div>
-
-                </div>
             </div>
 
 
