Componente de paginacao

--- a/form2.html
+++ b/form2.html
@@ -30,10 +30,10 @@
 
                 <div>
                     <div class="dsmovie-card ">
-                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/qOxedwaJzdms2alAmIEHEnDeDzg.jpg"
-                            alt="Naruto">
+                        <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/8CmeBJNUzOFk29diWfJf8de332i.jpg"
+                            alt="Saitama">
                         <div class="dsmovie-form-description">
-                            <h3>Naruto</h3>
+                            <h3>One Punch Man</h3>
                             <form class="dsmovie-form">
                                 <div class="form-group dsmovie-form-group">
                                     <label for="email">Informe seu email</label>
