--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 
     <main>
         <section id="dsmovie-card-list" class="container">
+            <div class="dsmovie-pagination-container">
+                <div class="dsmovie-pagination-box">
+                    <button disabled>
+                        <img src="img/arrow.svg" alt="flecha">
+                    </button>
+                    <p>1 de 3</p>
+                    <button>
+                        <img class="dsmovie-flip-horizontal" src="img/arrow.svg" alt="flecha">
+                    </button>
+
+                </div>
+
+            </div>
 
             <div class="row">
 
@@ -52,12 +65,12 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-                    <div class="dsmovie-card ">
+                    <div class="dsmovie-card-2">
                         <img src="https://www.themoviedb.org/t/p/w440_and_h660_face/8CmeBJNUzOFk29diWfJf8de332i.jpg"
                             alt="Saitama">
-                        <div class="dsmovie-card-description">
+                        <div class="dsmovie-card-description-2">
                             <h3>One Punch Man</h3>
-                            <div class="dsmovie-card-description-bottom">
+                            <div class="dsmovie-card-description-bottom-2">
                                 <h4>4.0</h4>
                                 <div>
                                     <img src="img/star-full.svg" alt="Star">
@@ -67,14 +80,36 @@
                                     <img src="img/star-empty.svg" alt="Star">
                                 </div>
                                 <p>15 avaliações</p>                                                              
-                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                                <a class="dsmovie-btn" href="form2.html">Avaliar</a>
                             </div>
                             
                         </div>
 
                     </div>
                 </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="dsmovie-card-3">
+                        <img src="https://www.themoviedb.org/t/p/w220_and_h330_face/gO5pZRn58mF2npiEV3O6TGQCamm.jpg"
+                            alt="DemonSlayer">
+                        <div class="dsmovie-card-description-3">
+                            <h3>Demon Slayer</h3>
+                            <div class="dsmovie-card-description-bottom-3">
+                                <h4>4.6</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                </div>
+                                <p>7 avaliações</p>                                                              
+                                <a class="dsmovie-btn" href="form3.html">Avaliar</a>
+                            </div>
+                            
+                        </div>
 
+                    </div>
+                </div>
             </div>
 
 
